klio2 assignment after flex included

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="whole">
+        <nav>
         <h3>Kliotech</h3>
         <ul class="list" type="none">
             <li class="sublist">Home</li>
@@ -16,6 +17,8 @@
             <li class="sublist">Service</li>
             <li class="sublist">Feedback</li>
         </ul>
+        <button type="button">Log in</button>
+    </nav>
     </div>
 </body>
 </html>
